[gd_scene load_steps=17 format=3 uid="uid://cqinsp76bvluw"]

[ext_resource type="Script" path="res://plohie_chuvstva.gd" id="1_fwgnj"]
[ext_resource type="Texture2D" uid="uid://nxtbe0iwb51v" path="res://STIDNORM.png" id="2_g7m2l"]
[ext_resource type="Texture2D" uid="uid://be2dnr8nxaics" path="res://STIDBEG.png" id="3_qn3bg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_68lqt"]
atlas = ExtResource("2_g7m2l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_35vpd"]
atlas = ExtResource("2_g7m2l")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lco04"]
atlas = ExtResource("2_g7m2l")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxnyd"]
atlas = ExtResource("2_g7m2l")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx8x0"]
atlas = ExtResource("3_qn3bg")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eoii4"]
atlas = ExtResource("3_qn3bg")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehkda"]
atlas = ExtResource("3_qn3bg")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljw7f"]
atlas = ExtResource("3_qn3bg")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxlyx"]
atlas = ExtResource("3_qn3bg")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q1w2"]
atlas = ExtResource("3_qn3bg")
region = Rect2(128, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_gyde8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68lqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35vpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lco04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxnyd")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx8x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoii4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehkda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljw7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxlyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q1w2")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="Gradient" id="Gradient_iwmk4"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m6dpu"]
gradient = SubResource("Gradient_iwmk4")
fill = 1
fill_from = Vector2(0.7, 0.5)
fill_to = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[node name="Plohie_chuvstva" type="CharacterBody2D" groups=["Enemies"]]
script = ExtResource("1_fwgnj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.25438, 1.25438)
sprite_frames = SubResource("SpriteFrames_gyde8")
animation = &"run"
frame = 5
frame_progress = 0.42733

[node name="HitBox" type="Area2D" parent="."]

[node name="Coll" type="CollisionPolygon2D" parent="HitBox"]
scale = Vector2(1.09238, 1.09238)
polygon = PackedVector2Array(-40, 32, 32, 32, 32, 24, 16, 16, 16, -16, -8, -24, -24, -16, -32, 8)

[node name="TestTexture" type="Sprite2D" parent="."]
visible = false
texture = SubResource("GradientTexture2D_m6dpu")

[node name="MainColl" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-40, 32, 32, 32, 32, 24, 16, 16, 16, -16, -8, -24, -24, -16, -32, 8)

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]
